# akb

./: .gitignore  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CHANGE.md  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.audit.yaml  docker-compose.keycloak.yaml  docker-compose.qdrant.yaml  docker-compose.yaml  glama.json  llms-install.md  server.json
.claude-plugin/: marketplace.json
agents/: runtime.py  (+1 more)
backend/: .dockerignore  CHANGELOG.md  Dockerfile  pyproject.toml
backend/app/: __main__.py  cli.py  config.py  exceptions.py  main.py  openapi_contract.py  utils.py
backend/app/api/: deps.py
backend/app/api/routes/: access.py  activity.py  agent_sessions.py  auth.py  collections.py  documents.py  files.py  help.py  knowledge.py  knowledge_io.py  memory.py  oauth_metadata.py  public.py  search.py  sessions.py  tables.py
backend/app/db/: init.sql  postgres.py
backend/app/db/migrations/: 001_relations_to_edges.py  002_public_shares.py  003_rename_public_shares.py  004_embed_retry_columns.py  005_qdrant_index.py  006_indexable_chunks.py  007_outbox_sweep_index.py  008_drop_legacy_document_id.py  009_rename_qdrant_columns.py  010_external_git_mirror.py  011_external_doc_collections.py  012_drop_llm_metadata_cache.py  013_nfc_normalize.py  014_chunks_vault_id.py  015_events_outbox.py  016_chunks_drop_embedding.py  017_chunks_indexing_queue_index.py  018_drop_redundant_pending_index.py  019_s3_delete_outbox.py  020_unify_collection_membership.py  021_events_resource_uri.py  022_publications_resource_uri.py  023_drop_metadata_id.py  024_tokens_revoked_before.py  025_drop_phantom_root_collection.py  026_uri_collection_prefix.py  027_collection_path_reserved_segments.py  028_edges_kind.py  029_outbox_chunk_id_index.py  030_resource_content_hash.py  031_drop_memories_sessions.py  032_drop_supersedes.py  033_users_auth_provider.py  034_oidc_transients.py  035_fix_wikilink_alias_edges.py  036_resource_aliases.py  037_table_unique_keys_indexes.py  038_dynamic_table_updated_at_trigger.py  039_edges_vault_endpoint_indexes.py  040_tokens_vault_scope.py  (+1 more)
backend/app/models/: document.py  vault_scope.py
backend/app/repositories/: document_repo.py  events_repo.py  table_data_repo.py  table_registry_repo.py  vault_external_git_repo.py  vault_files_repo.py  vault_repo.py
backend/app/services/: _backfill.py  access_service.py  agent_memory_service.py  audit_log.py  auth_service.py  collection_service.py  delete_worker.py  document_service.py  embed_worker.py  events_publisher.py  external_git_poller.py  external_git_service.py  file_service.py  git_service.py  health.py  http_pool.py  index_service.py  keycloak_oidc.py  kg_service.py  knowledge_io.py  lifecycle.py  llm_service.py  memory_service.py  metadata_worker.py  okf.py  password_service.py  publication_service.py  rerank_service.py  resource_hash.py  resource_integrity.py  role_sync.py  s3_delete_worker.py  search_service.py  session_service.py  sparse_encoder.py  table_row_query.py  table_row_write.py  table_service.py  template_registry.py  todo_service.py  (+4 more)
backend/app/services/adapters/: s3_adapter.py
backend/app/services/vector_store/: __init__.py  _seahorse_common.py  base.py  factory.py  pgvector.py  qdrant.py  seahorse.py  seahorse_cloud.py  seahorse_db.py  seahorse_db_grpc.py
backend/app/services/vector_store/_grpc/: README.md
backend/app/services/vector_store/_grpc/proto/coral/catalog/v1/: catalog.proto  catalog_pb2.py  catalog_pb2_grpc.py
backend/app/services/vector_store/_grpc/proto/coral/common/v1/: common.proto  common_pb2.py  common_pb2_grpc.py
backend/app/services/vector_store/_grpc/proto/coral/export/v1/: export.proto
backend/app/services/vector_store/_grpc/proto/coral/health/v1/: health.proto  health_pb2.py  health_pb2_grpc.py
backend/app/services/vector_store/_grpc/proto/coral/ingest/v1/: ingest.proto  ingest_pb2.py  ingest_pb2_grpc.py
backend/app/services/vector_store/_grpc/proto/coral/log/v1/: log.proto
backend/app/services/vector_store/_grpc/proto/coral/node/v1/: node.proto
backend/app/util/: errors.py  git_refs.py  text.py
backend/mcp_server/: help.py  http_app.py  instructions.py  server.py  tools.py
backend/scripts/: backfill_vault_id.py  init_bm25_vocab.py  migrate_jsonb_to_real_tables.py  migrate_pgvector_to_seahorsedb.py  reindex_all.py
backend/scripts/ci/: embed_stub.py
backend/templates/doc-templates/: incident-report.md  meeting-notes.md  okr.md  postmortem.md  release-note.md  test-plan.md
backend/templates/vault-templates/: engineering.yaml  finance.yaml  hr.yaml  product.yaml
backend/tests/: _wait_for_indexing.sh  conftest.py  test_agent_sessions_e2e.sh  test_akb_put_slug_unit.py  test_audit_log.py  test_auth_change_password.py  test_auth_config_shape_unit.py  test_auth_password_e2e.sh  test_author_resolution_e2e.sh  test_claim_injection_unit.py  test_cli_resource_integrity_unit.py  test_collection_hierarchy_e2e.sh  test_collection_lifecycle_e2e.sh  test_collection_repo.py  test_collection_service.py  test_concurrency_repro_e2e.sh  test_defensive_e2e.sh  test_doc_identity_scenarios.sh  test_doc_slug_unit.py  test_document_get_at_commit_unit.py  test_document_get_missing_file_unit.py  test_document_hash_contract_unit.py  test_document_history_unit.py  test_e2e.sh  test_edge_extra_e2e.sh  test_edge_more_e2e.sh  test_edit_e2e.sh  test_errors_unit.py  test_events_emit_e2e.sh  test_external_git_e2e.sh  test_forbidden_permission_code_e2e.sh  test_git_service.py  test_graph_replace_e2e.sh  test_help_skill_template_e2e.sh  test_help_skill_unit.py  test_history_rest_e2e.sh  test_hybrid_access_e2e.sh  test_hybrid_boundary_e2e.sh  test_hybrid_chaos_e2e.sh  test_hybrid_edge_e2e.sh  (+83 more)
backend/tests/bench/: sparse_shape_bench.py
backend/tests/concurrency/: repro_e01_multivault.py  repro_e02_samepath.py  repro_e03_update_race.py  repro_e05_e06_delete_race.py  repro_pub_security.sh  test_alter_unique_race_unit.py  test_ensure_collection_race_unit.py  test_invariants.sh  test_invariants_unit.py
backend/tests/eval/: README.md  run_eval.py  samples.jsonl
(+386 files in other folders)
