[project]
name = "akb"
version = "0.1.0"
description = "Agent Knowledgebase - Organizational Memory for Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "gitpython>=3.1.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.0.0",
    "bcrypt>=4.0.0",
    "boto3>=1.35.0",
    "qdrant-client>=1.12.0",
    "kiwipiepy>=0.17.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Default ruleset is `[E, F]`. The three style rules below are routinely
# the wrong call for this codebase:
#   E402 — lazy/conditional imports (heavy ML/Kiwi/embedding modules) are
#          deliberately deferred past the file top to keep import-time
#          fast and side-effect-free.
#   E701/E702 — single-line `if x: do_y` and `x = …; y = …` are kept for
#          tight setup blocks; splitting hurts readability more than it helps.
ignore = ["E402", "E701", "E702"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
