[project]
name = "akb"
version = "0.1.0"
description = "Agent Knowledgebase - Organizational Memory for Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "gitpython>=3.1.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.0.0",
    "bcrypt>=4.0.0",
    "boto3>=1.35.0",
    "qdrant-client>=1.12.0",
    "kiwipiepy>=0.17.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Default ruleset is `[E, F]`. The three style rules below are routinely
# the wrong call for this codebase:
#   E402 — lazy/conditional imports (heavy ML/Kiwi/embedding modules) are
#          deliberately deferred past the file top to keep import-time
#          fast and side-effect-free.
#   E701/E702 — single-line `if x: do_y` and `x = …; y = …` are kept for
#          tight setup blocks; splitting hurts readability more than it helps.
ignore = ["E402", "E701", "E702"]

[tool.mypy]
python_version = "3.11"
# Most of our third-party deps (asyncpg, kiwipiepy, redis, qdrant-client, …)
# don't ship type stubs. Treat them as Any rather than erroring out — we
# still get value from intra-codebase type checks.
ignore_missing_imports = true
# Gradual typing: untyped function bodies are not type-checked. Tightening
# to `check_untyped_defs = true` is a follow-up once newer services are
# fully annotated.
check_untyped_defs = false

[tool.bandit]
# Skip checks that are false-positives for our codebase:
#   B104 — uvicorn `host = "0.0.0.0"` is the intended bind for the API
#          container. The boundary is the ingress/firewall, not the app.
#   B608 — "hardcoded SQL" reports fire on f-string SQL where the only
#          interpolated values are *schema/table identifiers from our own
#          config* (vector_store_schema, vault-scoped vt_* names) plus
#          static DDL in migrations. Every user-controlled value reaches
#          PG via asyncpg `$N` placeholders. The real `akb_sql`
#          user-supplied path is sandboxed in table_service._validate_sql_surface.
skips = ["B104", "B608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
