[project]
name = "akb"
version = "0.8.6"
description = "Agent Knowledge Base - Organizational Memory for Agents"
requires-python = ">=3.14"
# Runtime deps are exact-pinned for the same reproducibility reason
# the [dev] tools below are: a silent resolver upgrade should not be
# able to swap our backend image's behavior on a re-deploy. Bumps are
# an explicit code change. The versions below were the resolved set
# at 0.6.6 release time, after the Python 3.14 base image rebuild;
# they have all been observed working end-to-end in the publications
# / MCP / hybrid-search regression suites.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "asyncpg==0.31.0",
    "pgvector==0.4.2",
    "gitpython==3.1.50",
    "python-frontmatter==1.3.0",
    "httpx==0.28.1",
    "mcp[cli]==1.27.2",
    "pyyaml==6.0.3",
    "python-multipart==0.0.32",
    "pyjwt==2.13.0",
    "bcrypt==5.0.0",
    "boto3==1.43.23",
    "qdrant-client==1.18.0",
    "kiwipiepy==0.23.1",
    "redis==8.0.0",
    "grpcio==1.81.0",
    "protobuf==6.33.6",
    "pyarrow==22.0.0",
]

[project.optional-dependencies]
# Static-analysis tooling is exact-pinned so CI's `pip install -e '.[dev]'`
# produces the same gate every PR. Floor-only specifiers (`>=`) let a
# silent dep upgrade flip CI from pass→fail (or fail→pass) on the same
# commit without anyone noticing — which is the bug shape we hit in 0.6.4
# (local mypy showed 18 errors on the exact ref CI marked green). Bump
# these intentionally, not by drift.
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.16",
    "mypy==2.1.0",
    "bandit[toml]==1.9.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 120
# Generated protobuf stubs are vendored under the gRPC driver — they
# carry their own (unused) import discipline that ruff would flag,
# and we don't hand-edit them.
extend-exclude = [
    "app/services/vector_store/_grpc/proto/**",
]

[tool.ruff.lint]
# Default ruleset is `[E, F]`. The three style rules below are routinely
# the wrong call for this codebase:
#   E402 — lazy/conditional imports (heavy ML/Kiwi/embedding modules) are
#          deliberately deferred past the file top to keep import-time
#          fast and side-effect-free.
#   E701/E702 — single-line `if x: do_y` and `x = …; y = …` are kept for
#          tight setup blocks; splitting hurts readability more than it helps.
ignore = ["E402", "E701", "E702"]

[tool.mypy]
python_version = "3.14"
# Most of our third-party deps (asyncpg, kiwipiepy, redis, qdrant-client, …)
# don't ship type stubs. Treat them as Any rather than erroring out — we
# still get value from intra-codebase type checks.
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
# Gradual typing: untyped function bodies are not type-checked. Tightening
# to `check_untyped_defs = true` is a follow-up once newer services are
# fully annotated.
check_untyped_defs = false

[tool.bandit]
# Skip checks that are false-positives for our codebase:
#   B104 — uvicorn `host = "0.0.0.0"` is the intended bind for the API
#          container. The boundary is the ingress/firewall, not the app.
#   B608 — "hardcoded SQL" reports fire on f-string SQL where the only
#          interpolated values are *schema/table identifiers from our own
#          config* (vector_store_schema, vault-scoped vt_* names) plus
#          static DDL in migrations. Every user-controlled value reaches
#          PG via asyncpg `$N` placeholders. The real `akb_sql`
#          user-supplied path is sandboxed in table_service._validate_sql_surface.
skips = ["B104", "B608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
